test : 대화 타입 연관 비즈니스 로직 단위테스트 작성(#100)